# ComunicaconROS2Sensores

./: README.md
cpp_srv/: CMakeLists.txt  package.xml
cpp_srv/src/: ConfigHardwareTrajectory_server.cpp
exo_interfaces/: CMakeLists.txt  package.xml
exo_interfaces/srv/: ConfigHardwareTrajectory.srv
py_srv/: package.xml  setup.cfg  setup.py
py_srv/config/: hardware_configuration.yaml  trajectory.yaml
py_srv/py_srv/: ConfigHardwareCANBUS_server.py  ConfigHardwareTrajectory_client.py
